# l3-data-feed

./: .env.example  README.md  __main__.py  exceptions.py  install.sh  main.py  pyproject.toml
config/: app.py  log.py
database/: __init__.py  database.py
database/table/: __init__.py  orderbook.py  tradebook.py
tech_spec/: l3_data_parser_bybit_exchange.md
websocket/: __init__.py
websocket/collector/: bybit.py
