[project]
name = "l3-data-feed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "loguru>=0.7.3",
    "orjson>=3.11.9",
    "picows>=2.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.46",
]
